fixed text align center on widget

--- a/wp-content/plugins/david-tutera/css/style.scss
+++ b/wp-content/plugins/david-tutera/css/style.scss
@@ -330,11 +330,11 @@
         padding: 15px;
     }
     
-    .elementor-widget-container {
+    .elementor-widget-sidebar {
         text-align: center;
     }
     
-    .elementor-widget-container a {
+    .elementor-widget-sidebar a {
         color: #000;
         &:hover {
             color: $dt-gold;
